<resources>
    <string name="app_name">netcast</string>
    <string name="title_radio">NetCast</string>
    <string name="title_download">Download</string>
    <string name="title_podcast">Podcasts</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_search">Search</string>
    <string name="radio_player">Net Cast Player</string>
    <string name="see_all">See All</string>
    <string name="hint_search">Search station,song,podcast</string>
    <string name="desccontent">imagesearch</string>
    <string name="title_settings">Settings</string>
    <string name="title_welcome">Welcome To netcast \n Nice to have you here</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="all">See All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exo_download_notification_channel_name" />
    <string name="notification_Channel_Description">Netcast app notification manager</string>
    <string name="radio">Radio</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_intent_action">from alarm</string>
    <string name="imprint">"Legal Disclosure Name and Physical Address of the Website Owner: Contact Information: Phone Number, Email and/or fax number. Registered office: Managing Director: Any registration and license numbers, including VAT  Court of Registration:  VAT-Number Sales Tax Identification Number: In accordance with Section 18 II of the German State Treaty on Broadcasting and Telemedia (MStV), we assume responsibility for the content of this website. Copyright Information Copyright All rights reserved. Online Dispute Resolution \"In accordance with Article 14(1) of the EU Regulation No 524/2013 on Online Dispute Resolution for consumers: The European Commission provides a platform for online dispute resolution, which you can find at https://webgate.ec.europa.eu/odr/. We do not participate in consumer arbitration board proceedings. This platform enables consumers to resolve disputes with online businesses in an efficient and impartial manner. "</string>
</resources>