<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_radio"
        android:icon="@drawable/ic_radio2"
        android:menuCategory="secondary"
        android:title="@string/radio" />

    <item
        android:id="@+id/navigation_podcast"
        android:icon="@drawable/ic_mic"
        android:menuCategory="secondary"
        android:title="@string/title_podcast" />

    <item
        android:id="@+id/navigation_favourites"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/title_favourites" />
    <item
        android:id="@+id/navigation_search"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />
</menu>