<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_radio">

    <fragment
        android:id="@+id/navigation_radio"
        android:name="com.coderoids.radio.ui.radio.RadioFragment"
        android:label="@string/title_radio"
        tools:layout="@layout/fragment_radio" >
        <action
            android:id="@+id/action_navigation_radio_to_navigation_radio_player"
            app:destination="@id/navigation_radio_player" />
    </fragment>

    <fragment
        android:id="@+id/navigation_podcast"
        android:name="com.coderoids.radio.ui.podcast.PodcastFragment"
        android:label="@string/title_podcast"
        tools:layout="@layout/fragment_podcast" >
        <action
            android:id="@+id/action_navigation_podcast_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.coderoids.radio.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_navigation_favourites_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.coderoids.radio.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_podcast"
            app:destination="@id/navigation_podcast" />
    </fragment>

    <fragment
        android:id="@+id/navigation_radio_player"
        android:name="com.coderoids.radio.ui.radio.radioplayer.RadioPlayerFragment"
        android:label="@string/radio_player"
        tools:layout="@layout/fragment_radio_player" />
</navigation>