<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

        <variable
            name="radioplayerb"
            type="com.coderoids.radio.ui.radioplayermanager.RadioPlayerActivity" />

        <variable
            name="radioplayervm"
            type="com.coderoids.radio.ui.radioplayermanager.RadioPlayerAVM" />

        <variable
            name="podepisodeadapter"
            type="com.coderoids.radio.ui.radioplayermanager.adapter.PodEpisodesAdapter" />

        <variable
            name="adapter"
            type="com.coderoids.radio.ui.radio.adapter.RadioFragmentAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_nav_grad"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_settings"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_channel_name"
                style="@style/textHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_radio"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/fav_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:button="@drawable/checkbox_selector"
                android:buttonTint="@color/Red"
                android:gravity="center"
                android:scaleX="0.5"
                android:scaleY="0.5"
                app:layout_constraintEnd_toEndOf="@+id/tv_channel_name"
                app:layout_constraintTop_toTopOf="parent" />
            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_115sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_channel_name">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_channel_logo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/logo"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeWidth="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_channel_logo"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/back_blur"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.2"
                            android:scaleType="centerCrop"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                            app:strokeWidth="1dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/episode"
                            android:textColor="@color/white"
                            android:padding="@dimen/_5sdp"
                            style="@style/textHeading"/>
                        <com.google.android.exoplayer2.ui.PlayerView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_60sdp"
                            app:unplayed_color="@color/white"
                            app:played_color="@color/Red"
                            android:id="@+id/player_view"
                            app:hide_during_ads="false"
                            app:hide_on_touch="false"
                            app:auto_show="true"
                            android:layout_alignParentBottom="true"
                            app:show_timeout="0"/>
                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:visibility="gone"
                            android:id="@+id/podcast_loader"/>
                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/channel_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_bar_layout" />

        <TextView
            android:id="@+id/channel_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_arrow_outward_24"
            android:drawableTint="@color/black"
            android:padding="@dimen/_10sdp"
            android:text="Go To Website"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channel_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_suggestion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/channel_website">

            <TextView
                android:id="@+id/tv_player_radio_more"
                style="@style/textHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="More Stations"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toStartOf="@+id/tv_all_player_more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_all_player_more"
                style="@style/textHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/all"
                android:textColor="@color/OrangeRed"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_player_radio_more"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_radio_more_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_player_radio_more"
                app:setAdapter="@{adapter}"
                app:submitList="@{radioplayervm.suggestedRadioList}"
                tools:listitem="@layout/radio_row" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pod_episodes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/channel_website"
            >

            <TextView
                android:id="@+id/tv_podcast_episodes"
                style="@style/textHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="Episodes"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/podcast_episodes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_25sdp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_episodes"
            app:setAdapter="@{podepisodeadapter}"
            app:submitList="@{radioplayervm.podEpisodeArray}"
            tools:listitem="@layout/podcast_episodes_row" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>